<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Hình ảnh ở đầu bố cục -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/money" />

    <!-- LinearLayout cho nhập ngày và nút lịch -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp">

        <!-- EditText cho nhập ngày -->
        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Ngày"
            android:inputType="date" />

        <!-- ImageButton cho biểu tượng lịch -->
        <ImageButton
            android:id="@+id/buttonCalendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <!-- EditText cho tên khoản chi tiêu -->
    <EditText
        android:id="@+id/editTextExpenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="Nội dung" />

    <!-- EditText cho số tiền khoản chi tiêu -->
    <EditText
        android:id="@+id/editTextExpenseAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="Số tiền"
        android:inputType="numberDecimal" />

    <!-- EditText cho địa điểm khoản chi tiêu -->
    <EditText
        android:id="@+id/editTextExpenseLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="Địa điểm" />

    <!-- Spinner cho danh mục khoản chi tiêu -->
    <Spinner
        android:id="@+id/spinnerExpenseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/expense_categories" />

    <!-- SwitchCompat để chỉ ra nếu khoản chi tiêu đã trả -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchExpensePaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đã trả" />

    <!-- Nút để thêm khoản chi tiêu -->
    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:text="Thêm" />
</LinearLayout>
